[package]
name = "mtunnel"
version = "0.1.0"
authors = ["misakachen <misakachen@tencent.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
h2 = "0.4"
serde = "1.0"
log = "0.4"
http = "1.0"
bytes = "1.0"
env_logger = "0.10"
getopts = "0.2"
rustls = { version = "0.22", default-features = false }
serde_derive = "1.0"
futures-util = { version = "0.3", default-features = false }
pin-project-lite = "0.2"
rustls-pemfile = "2"
tokio-rustls = "0.25"
toml = "0.8"
