[package]
name = "mtunnel"
version = "0.1.0"
authors = ["cssivision <cssivision@gmail.com>"]
edition = "2021"

[dependencies]
awak = "0.2.29"
h2 = "0.4"
serde = "1.0"
log = "0.4"
http = "1.0"
bytes = "1.0"
env_logger = "0.10"
getopts = "0.2"
serde_derive = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
pin-project-lite = "0.2"
rustls-pemfile = "2"
futures-rustls = "0.25"
futures-io = "0.3"
futures-channel = { version = "0.3", features = ["sink"] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
toml = "0.8"
