[package]
name = "mtunnel"
version = "0.1.0"
authors = ["cssivision <cssivision@gmail.com>"]
edition = "2021"

[dependencies]
awak = "0.2"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
h2 = "0.4"
log = "0.4"
http = "1"
bytes = "1"
getopts = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
pin-project-lite = "0.2"
rustls-pemfile = "2"
futures-rustls = "0.26"
futures-io = "0.3"
futures-channel = { version = "0.3", features = ["sink"] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
toml = "0.9"
